examples/test/testpolicy8354.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8354
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key31: value35
      key48: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value45
          key33: value28
          key39: value2
      podSelector:
        matchLabels:
          key44: value3
